--- a/front-end/src/variables.less
+++ b/front-end/src/variables.less
@@ -1,8 +1,11 @@
-@vue-blue: #32485F;
-@vue-green: #00C185;
+@vue-blue: #32485f;
+@vue-green: #00c185;
 
 @grey: #f1f1f1;
-@dark-grey: #D9D9D9;
-@white: #FFF;
+@dark-grey: #d9d9d9;
+@white: #fff;
+@blue: #409eff;
+@cl-warning: rgba(235, 158, 5, 0.1);
+@cl-hint: rgba(64, 158, 255, 0.1);
 
 @top-nav-height: 45px;
