show student answers and score after exam

--- a/front-end/src/quiz/variables.less
+++ b/front-end/src/quiz/variables.less
@@ -5,7 +5,10 @@
 @dark-grey: #d9d9d9;
 @white: #fff;
 @blue: #409eff;
+@red: #f56c6c;
 @cl-warning: rgba(235, 158, 5, 0.1);
 @cl-hint: rgba(64, 158, 255, 0.1);
+@cl-danger: hsla(0, 87%, 69%, 0.1);
+@cl-success: rgba(103, 194, 58, 0.1);
 
 @top-nav-height: 45px;
